task-4/clusterIP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clip
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
