task-4/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clip
            port:
              number: 8000
